--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4714,63 +4714,91 @@ section.lazy-placeholder:after {
   box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
   transition: box-shadow 0.3s;
 }
-.cid-sfzePyx4Kk {
+.cid-tYqnTPH91r {
   padding-top: 90px;
   padding-bottom: 90px;
   background-color: #efefef;
 }
-.cid-sfzePyx4Kk P {
-  color: #767676;
+.cid-tYqnTPH91r .card-box {
+  padding: 0 2rem;
 }
-.cid-sfzePzcaJa {
-  padding-top: 45px;
-  padding-bottom: 45px;
-  background: #ffffff;
+.cid-tYqnTPH91r .mbr-section-btn {
+  padding-top: 1rem;
 }
-.cid-sfzePzcaJa .images-container.container-fluid {
-  padding: 0;
-}
-.cid-sfzePzcaJa .media-container-row {
-  margin: 0 auto;
-  align-items: stretch;
-  -webkit-align-items: stretch;
-}
-.cid-sfzePzcaJa .media-container-row .img-item {
-  display: -webkit-flex;
-  flex-direction: column;
-  justify-content: center;
-  position: relative;
-  width: 100%;
-  z-index: 1;
-  -webkit-flex-direction: column;
-  -webkit-justify-content: center;
-}
-.cid-sfzePzcaJa .media-container-row .img-item img {
-  width: 100%;
-  min-height: 1px;
-}
-.cid-sfzePzcaJa .media-container-row .img-item .img-caption {
-  background: #ffffff;
-  z-index: 2;
-  padding: 1rem 1rem;
-  word-break: break-word;
-}
-.cid-sfzePzcaJa .media-container-row .img-item .img-caption p {
+.cid-tYqnTPH91r .mbr-section-btn a {
+  margin-top: 1rem;
   margin-bottom: 0;
 }
-.cid-sfzePzcaJa .media-container-row .img-item.item1 {
-  padding: 0 2rem 0 0;
+.cid-tYqnTPH91r h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 2rem;
 }
-@media (max-width: 992px) {
-  .cid-sfzePzcaJa .img-item {
-    width: 100% !important;
-  }
-  .cid-sfzePzcaJa .img-item.item1 {
-    width: 100%;
-    flex-basis: initial !important;
-    padding: 0 0 2rem 0 !important;
-    -webkit-flex-basis: initial !important;
-  }
+.cid-tYqnTPH91r p {
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 1.5rem;
+}
+.cid-tYqnTPH91r .mbr-text {
+  color: #767676;
+}
+.cid-tYqnTPH91r .card-wrapper {
+  height: 100%;
+  padding-bottom: 2rem;
+  background: #ffffff;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-tYqnTPH91r .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+  transition: box-shadow 0.3s;
+}
+.cid-tYqnTPH91r .card-title {
+  text-align: center;
+}
+.cid-tYqoY5P3dO {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #efefef;
+}
+.cid-tYqoY5P3dO .card-box {
+  padding: 0 2rem;
+}
+.cid-tYqoY5P3dO .mbr-section-btn {
+  padding-top: 1rem;
+}
+.cid-tYqoY5P3dO .mbr-section-btn a {
+  margin-top: 1rem;
+  margin-bottom: 0;
+}
+.cid-tYqoY5P3dO h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 2rem;
+}
+.cid-tYqoY5P3dO p {
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 1.5rem;
+}
+.cid-tYqoY5P3dO .mbr-text {
+  color: #767676;
+}
+.cid-tYqoY5P3dO .card-wrapper {
+  height: 100%;
+  padding-bottom: 2rem;
+  background: #ffffff;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-tYqoY5P3dO .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+  transition: box-shadow 0.3s;
+}
+.cid-tYqoY5P3dO .card-title {
+  text-align: center;
 }
 .cid-tYqhxAskal {
   padding-top: 90px;
@@ -6401,119 +6429,89 @@ section.lazy-placeholder:after {
   box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
   transition: box-shadow 0.3s;
 }
-.cid-si104W9bsb {
+.cid-tYqqX4CVr0 {
   padding-top: 90px;
   padding-bottom: 90px;
   background-color: #efefef;
 }
-.cid-si104W9bsb P {
-  color: #767676;
+.cid-tYqqX4CVr0 .card-box {
+  padding: 0 2rem;
 }
-.cid-si104XrkFE {
-  padding-top: 45px;
-  padding-bottom: 45px;
-  background: #ffffff;
+.cid-tYqqX4CVr0 .mbr-section-btn {
+  padding-top: 1rem;
 }
-.cid-si104XrkFE .images-container.container-fluid {
-  padding: 0;
-}
-.cid-si104XrkFE .media-container-row {
-  margin: 0 auto;
-  align-items: stretch;
-  -webkit-align-items: stretch;
-}
-.cid-si104XrkFE .media-container-row .img-item {
-  display: -webkit-flex;
-  flex-direction: column;
-  justify-content: center;
-  position: relative;
-  width: 100%;
-  z-index: 1;
-  -webkit-flex-direction: column;
-  -webkit-justify-content: center;
-}
-.cid-si104XrkFE .media-container-row .img-item img {
-  width: 100%;
-  min-height: 1px;
-}
-.cid-si104XrkFE .media-container-row .img-item .img-caption {
-  background: #ffffff;
-  z-index: 2;
-  padding: 1rem 1rem;
-  word-break: break-word;
-}
-.cid-si104XrkFE .media-container-row .img-item .img-caption p {
+.cid-tYqqX4CVr0 .mbr-section-btn a {
+  margin-top: 1rem;
   margin-bottom: 0;
 }
-.cid-si104XrkFE .media-container-row .img-item.item1 {
-  padding: 0 2rem 0 0;
+.cid-tYqqX4CVr0 h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 2rem;
 }
-@media (max-width: 992px) {
-  .cid-si104XrkFE .img-item {
-    width: 100% !important;
-  }
-  .cid-si104XrkFE .img-item.item1 {
-    width: 100%;
-    flex-basis: initial !important;
-    padding: 0 0 2rem 0 !important;
-    -webkit-flex-basis: initial !important;
-  }
+.cid-tYqqX4CVr0 p {
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 1.5rem;
 }
-.cid-tYqkeqkX8O {
+.cid-tYqqX4CVr0 .mbr-text {
+  color: #767676;
+}
+.cid-tYqqX4CVr0 .card-wrapper {
+  height: 100%;
+  padding-bottom: 2rem;
+  background: #ffffff;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-tYqqX4CVr0 .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+  transition: box-shadow 0.3s;
+}
+.cid-tYqqX4CVr0 .card-title {
+  text-align: center;
+}
+.cid-tYqqYEJIWJ {
   padding-top: 90px;
   padding-bottom: 90px;
   background-color: #efefef;
 }
-.cid-tYqkeqkX8O P {
-  color: #767676;
+.cid-tYqqYEJIWJ .card-box {
+  padding: 0 2rem;
 }
-.cid-tYqkgaKvmW {
-  padding-top: 45px;
-  padding-bottom: 45px;
-  background: #ffffff;
+.cid-tYqqYEJIWJ .mbr-section-btn {
+  padding-top: 1rem;
 }
-.cid-tYqkgaKvmW .images-container.container-fluid {
-  padding: 0;
-}
-.cid-tYqkgaKvmW .media-container-row {
-  margin: 0 auto;
-  align-items: stretch;
-  -webkit-align-items: stretch;
-}
-.cid-tYqkgaKvmW .media-container-row .img-item {
-  display: -webkit-flex;
-  flex-direction: column;
-  justify-content: center;
-  position: relative;
-  width: 100%;
-  z-index: 1;
-  -webkit-flex-direction: column;
-  -webkit-justify-content: center;
-}
-.cid-tYqkgaKvmW .media-container-row .img-item img {
-  width: 100%;
-  min-height: 1px;
-}
-.cid-tYqkgaKvmW .media-container-row .img-item .img-caption {
-  background: #ffffff;
-  z-index: 2;
-  padding: 1rem 1rem;
-  word-break: break-word;
-}
-.cid-tYqkgaKvmW .media-container-row .img-item .img-caption p {
+.cid-tYqqYEJIWJ .mbr-section-btn a {
+  margin-top: 1rem;
   margin-bottom: 0;
 }
-.cid-tYqkgaKvmW .media-container-row .img-item.item1 {
-  padding: 0 2rem 0 0;
+.cid-tYqqYEJIWJ h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 2rem;
 }
-@media (max-width: 992px) {
-  .cid-tYqkgaKvmW .img-item {
-    width: 100% !important;
-  }
-  .cid-tYqkgaKvmW .img-item.item1 {
-    width: 100%;
-    flex-basis: initial !important;
-    padding: 0 0 2rem 0 !important;
-    -webkit-flex-basis: initial !important;
-  }
+.cid-tYqqYEJIWJ p {
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 1.5rem;
+}
+.cid-tYqqYEJIWJ .mbr-text {
+  color: #767676;
+}
+.cid-tYqqYEJIWJ .card-wrapper {
+  height: 100%;
+  padding-bottom: 2rem;
+  background: #ffffff;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-tYqqYEJIWJ .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+  transition: box-shadow 0.3s;
+}
+.cid-tYqqYEJIWJ .card-title {
+  text-align: center;
 }
